update JS TodoList

--- a/JS TodoList/JS TodoList.csproj
+++ b/JS TodoList/JS TodoList.csproj
@@ -67,8 +67,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\add.png" />
+    <Content Include="images\cancel.png" />
+    <Content Include="images\edit.png" />
+    <Content Include="images\remove.png" />
     <Content Include="index.html" />
-    <Content Include="script.js" />
+    <Content Include="scripts\events.js" />
+    <Content Include="styles\mainStyles.css" />
+    <Content Include="styles\reset.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -83,6 +89,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
