--- a/Underscore/Underscore.csproj
+++ b/Underscore/Underscore.csproj
@@ -86,6 +86,8 @@
     <Content Include="node_modules\underscore\README.md" />
     <Content Include="node_modules\underscore\underscore-min.js.map" />
     <Content Include="node_modules\underscore\underscore.js.map" />
+    <Content Include="package.json" />
+    <Content Include="package-lock.json" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
